[project]
name = "report-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "mahdy",email = "heymahdymuzzammil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.121.0,<0.122.0)",
    "firebase-admin (>=7.1.0,<8.0.0)",
    "langchain (>=1.0.3,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.0.2,<2.0.0)",
    "langgraph (>=1.0.2,<2.0.0)",
    "langsmith (>=0.4.41,<0.5.0)"
]

[tool.poetry]
 package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
